# bridge-x

./: .env.example  .gitattributes  .gitignore  BUGFIXES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-flutter.yml  ci-rust.yml  ci-tauri.yml  release.yml
backend/: Cargo.toml  README.md
backend/src/: lib.rs  main.rs  qr.rs  util.rs
backend/src/crypto/: keys.rs
backend/src/db/: mod.rs  models.rs  schema.sql
backend/src/server/: api.rs  mod.rs  p2p.rs  upload.rs
backend/tests/: crypto_test.rs  db_test.rs  integration_test.rs
desktop/: README.md
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: backend_manager.rs  file_picker.rs  main.rs
docs/: HOWTO_SELFHOST.md  architecture.md  openapi.yaml
mobile/: pubspec.yaml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/lib/: main.dart
mobile/lib/screens/: devices_screen.dart  file_picker_screen.dart  home_screen.dart  qr_scanner_screen.dart
mobile/lib/services/: api_service.dart  pairing_service.dart  transfer_service.dart
scripts/: bootstrap.sh  build_all.sh  build_release.sh  local_run.sh  run_all_tests.sh
