[package]
name = "bridgex-backend"
version = "0.1.0"
edition = "2021"
authors = ["BridgeX Contributors"]
license = "MIT"
description = "BridgeX backend server for P2P file transfer and device pairing"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Cryptography
x25519-dalek = "2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"

# QR code generation
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
image = "0.24"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
hyper = { version = "1", features = ["client"] }
tokio-test = "0.4"

[[bin]]
name = "bridgex-server"
path = "src/main.rs"
